--- a/crates/anchor-gen/Cargo.toml
+++ b/crates/anchor-gen/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "anchor-gen"
-version = "0.3.1"
+name = "anchor-gen-tulip"
+version = "0.4.0"
 edition = "2021"
 description = "Generates an Anchor CPI crate from a JSON IDL."
 authors = ["Ian Macalinao <ian@saber.so>"]
@@ -15,10 +15,10 @@ path = "src/lib.rs"
 
 [features]
 compat-program-result = [
-  "anchor-generate-cpi-crate/compat-program-result",
-  "anchor-generate-cpi-interface/compat-program-result"
+  "anchor-generate-cpi-crate-tulip/compat-program-result",
+  "anchor-generate-cpi-interface-tulip/compat-program-result"
 ]
 
 [dependencies]
-anchor-generate-cpi-crate = { version = "0.3.0", path = "../anchor-generate-cpi-crate" }
-anchor-generate-cpi-interface = { version = "0.3.0", path = "../anchor-generate-cpi-interface" }
+anchor-generate-cpi-crate-tulip = { version = "0.4.0", path = "../anchor-generate-cpi-crate" }
+anchor-generate-cpi-interface-tulip = { version = "0.4.0", path = "../anchor-generate-cpi-interface" }
