--- a/crates/anchor-idl/Cargo.toml
+++ b/crates/anchor-idl/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "anchor-idl"
-version = "0.3.1"
+name = "anchor-idl-tulip"
+version = "0.4.0"
 edition = "2021"
 description = "Generates Rust code from an Anchor IDL."
 authors = ["Ian Macalinao <ian@saber.so>"]
@@ -12,7 +12,7 @@ keywords = ["solana", "anchor"]
 compat-program-result = []
 
 [dependencies]
-anchor-syn = { version = "0.24.2", features = ["idl"] }
+anchor-syn = { version = ">=0.24", features = ["idl"] }
 darling = "0.14"
 heck = "0.4.0"
 proc-macro2 = "1"
